--- a/Module_3/04_Challenge.html
+++ b/Module_3/04_Challenge.html
@@ -19,7 +19,7 @@
 
         console.log(cars);
 
-        console.log('New Car added: ' + cars[cars.length 7]);
+        console.log('New Car added: ' + cars[cars.length - 1]);
 
         console.log("All cars with index");
 
