--- a/Module_3/04_Challenge.html
+++ b/Module_3/04_Challenge.html
@@ -15,7 +15,7 @@
 
         console.log("last Car: " + cars[cars.length - 1]);
 
-        cars.add = ('mercedes-benz');
+        cars[6] = "mercedes-benz";
 
         console.log(cars);
 
