--- a/Module_4/Challenge_(A).html
+++ b/Module_4/Challenge_(A).html
@@ -21,7 +21,7 @@
     </ul>
 
     <script>
-        document.body.innerHTML =  (" Don't let what you cannot do interfere with what you can do ") 
+        document.body.innerHTML =  " Don't let what you cannot do interfere with what you can do "
     </script>
 </body>
 
